2006-08-05  Nathaniel Smith  <njs@pobox.com>

	* tests/log_quits_on_SIGPIPE/__driver__.lua: Make the cute commit
	message actually a commit message, rather than the world's longest
	branch name.

2006-08-05  Zack Weinberg  <zackw@panix.com>

	Clean up after merge from mainline:
	* luaext_globish.cc (match): Use e.what() instead of e.what.c_str(),
	when e is an informative_failure.
	* tester.cc (main): Similarly.
	* monotone.cc (process_all_options): Add an .as_external() that
	got lost.
	* mtn-sanity.cc: Include mt_version.hh.
	(mtn_sanity::initialize): New function.
	* mtn-sanity.hh: Prototype it.
	* sanity.hh: Make sanity::initialize virtual.
	* sanity.cc (sanity::initialize): Remove IN_TESTER #ifdef.
	Do PERM_MM system_flavour.
	* unix/main.cc (main): Change i to a size_t.
	* Makefile.am (tester_CPPFLAGS): Remove -DIN_TESTER kludge.

2006-08-04  Zack Weinberg  <zackw@panix.com>

	* platform.hh: Define ignore_sigpipe as a nop on win32 or declare
	it as an external on Unix.
	* unix/process.cc: Define ignore_sigpipe.
	* netsync.cc: No need to conditionally include signal.h.
	(run_netsync_protocol): Use ignore_sigpipe.
	* sanity.hh: Define PERM_MM here, with comment explaining when it
	is safe to use.
	* sanity.cc: Don't define PERM_MM.
	* ui.cc (fatal): Add note about need to keep message in sync with
	other copies.
	* unix/main.cc: Correct name in comment.  Downcase
	WRITE_STR_TO_STDERR and make it an inline function.  Adjust note
	about need to keep bug_report_message in sync with other copies.
	* win32/main.cc: Similarly.
	* commands.cc (crash): Undef maybe_throw_bare at end.
	* tests/log_quits_on_SIGPIPE: New test.
	* testsuite.lua: Add it.

2006-08-05  Nathaniel Smith  <njs@pobox.com>

	* cmd_diff_log.cc (log): Call cout.flush() after describing each
	revision.

2006-08-05  Nathaniel Smith  <njs@pobox.com>

	* work.cc (visit_file): Print a message when implicitly adding
	directories, and simplify a bit.

2006-08-04  Nathaniel Smith  <njs@pobox.com>
